Fix z-index

--- a/src/utils/dice.scss
+++ b/src/utils/dice.scss
@@ -1,5 +1,5 @@
 .dice-container {
-  z-index: 101;
+  z-index: 110;
   pointer-events: none;
   position: absolute;
   top: 0;
