--- a/src/utils/tooltip.scss
+++ b/src/utils/tooltip.scss
@@ -6,7 +6,7 @@
   right: 0;
   background: #00000088;
   box-shadow: inset 0 0 60px #000;
-  z-index: 10;
+  z-index: 105;
   display: flex;
   justify-content: center;
   align-items: center;
